SMSV-14 Fixed inputs spacing in add course modal.
There was a visual bug where the third input in the add course modal had
more vertical spacing than the other two modals.

--- a/frontend/static/css/courses.css
+++ b/frontend/static/css/courses.css
@@ -126,7 +126,6 @@
     width: 75%;
     height: 50px;
     padding: 15px;
-    margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
     border-width: 1px;
@@ -135,7 +134,7 @@
 }
 
 #course-add-modal input:first-child {
-    margin-bottom: 0;
+    margin-top: 20px;
 }
 
 #course-add-modal button {
